chore: update css

--- a/src/assets/css/forgot-password.css
+++ b/src/assets/css/forgot-password.css
@@ -78,7 +78,7 @@ body {
 .forgot .send-link {
   margin: 31px 0;
   color: #fff;
-  background-color: #32DBC6;
+  background-color: #0085DF;
 }
 
 .forgot .send-link:hover,
