--- a/src/assets/css/vehicle-type.css
+++ b/src/assets/css/vehicle-type.css
@@ -148,8 +148,8 @@ body {
 .vehicle-type section img {
   border-radius: 10px;
   margin-bottom: 15px;
-  width: 284px;
-  height: 337px;
+  /* width: 284px; */
+  height: 200px;
 
 }
 
