fix: verify form

--- a/src/assets/css/forgot-password.css
+++ b/src/assets/css/forgot-password.css
@@ -59,6 +59,7 @@ body {
 }
 
 .forgot .form input {
+  padding-left: 50px;
   margin-top: 58px;
   background: rgba(255, 255, 255, 0.4);
   color: #fff;
@@ -67,12 +68,10 @@ body {
 
 .forgot .form input:focus {
   outline: none;
-  text-align: center;
 }
 
 .forgot .form input::placeholder {
   color: #fff;
-  text-align: center;
 }
 
 .forgot .send-link {
