--- a/src/assets/css/vehicle-type.css
+++ b/src/assets/css/vehicle-type.css
@@ -60,9 +60,9 @@ body {
   height: auto;
 }
 
-/* .form-control:focus {
-  box-shadow: 0 0 0 0.25rem rgba(13, 253, 233, 0.25) !important;
-} */
+.form-control:focus {
+  box-shadow: none !important;
+}
 
 .vehicle-type nav form {
   margin: 0;
