--- a/src/assets/css/forgot-password.css
+++ b/src/assets/css/forgot-password.css
@@ -82,7 +82,7 @@ body {
 
 .forgot .send-link:hover,
 .forgot .resend-link:hover {
-  background-color: #EBEFD0;
+  background-color: #ECECEC;
   color: #085F63;
 }
 
