--- a/src/assets/css/signup.css
+++ b/src/assets/css/signup.css
@@ -63,9 +63,7 @@
 .signup-page .signup:hover,
 .signup-page .login:hover,
 .signup-page .google:hover {
-  box-shadow: -3px -4px 26px -5px rgba(27, 173, 218, 0.53);
-  -webkit-box-shadow: -3px -4px 26px -5px rgba(50, 219, 198, 0.53);
-  -moz-box-shadow: -3px -4px 26px -5px rgba(50, 219, 198, 0.53);
+  box-shadow: none !important;
 }
 
 .signup-page .google,
@@ -79,7 +77,7 @@
 .signup-page .google:hover,
 .signup-page .login:hover,
 .signup-page .signup:hover {
-  background-color: #EBEFD0;
+  background-color: #ECECEC;
   color: #0085DF;
 }
 
