--- a/src/assets/css/history.css
+++ b/src/assets/css/history.css
@@ -46,12 +46,13 @@
 .history .form-control:focus,
 .history .form-select:focus {
   background-color: #fff;
-  box-shadow: 0 0 0 0.25rem rgba(13, 253, 221, 0.25) !important;
+  box-shadow: none !important;
 }
 
 .history .form-control:focus,
 .history .form-control:hover {
   padding-right: 100px;
+  box-shadow: none !important;
 }
 
 .history .form-control::placeholder {
@@ -76,7 +77,7 @@
 .history .history-data {
   cursor: pointer;
   width: 100%;
-  margin-top: 40px;
+  margin-top: 50px;
   animation: myanim 3s infinite;
   transition: all 0.3s ease;
 }
@@ -155,7 +156,7 @@
 
 .history .bg-vehicle-1,
 .history .bg-vehicle-2 {
-  height: 350px;
+  height: 200px;
   border-radius: 8px;
   background-position: center;
   background-repeat: no-repeat;
@@ -188,16 +189,11 @@
 
   .history .bg-vehicle-1,
   .bg-vehicle-2 {
-    height: 300px;
+    height: 184px;
   }
 }
 
 @media all and (max-width: 991px) {
-
-  .history .main-section {
-    margin: 106px 0;
-  }
-
   .history form,
   .history .form-select,
   .history button {
@@ -207,6 +203,7 @@
   .history .form-control:focus,
   .history .form-control:hover {
     padding-right: 46px;
+    box-shadow: none !important;
   }
 
   .history .icon-search {
@@ -228,7 +225,7 @@
 
   .history .bg-vehicle-1,
   .history .bg-vehicle-2 {
-    height: 265px;
+    height: 172px;
   }
 
   .history .highlight h6,
@@ -309,6 +306,7 @@
   .history .form-control:focus,
   .history .form-control:hover {
     padding-right: 46px;
+    box-shadow: none !important;
   }
 
   .history form button {
